samples/_failures_safe/1761406999_2d6fef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf76a22.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_fbf76a22.c:170:17: error: expected declaration or statement at end of input
  170 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_fbf76a22.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbf76a22.c:170:17: error: expected declaration or statement at end of input
